--- a/css-1/lecture/business-card/styles.css
+++ b/css-1/lecture/business-card/styles.css
@@ -11,6 +11,7 @@ html  {
 .business-card{
     color: black;
     background-color: white;
+    border: 3px solid #E60028;
     padding: 10px 20px;
     border-radius:15px;
     width:500px;
