--- a/css-1/lecture/business-card/styles.css
+++ b/css-1/lecture/business-card/styles.css
@@ -16,7 +16,7 @@ html  {
     border-radius:15px;
     width:500px;
     text-align: center;
-    margin: 3% auto;
+    margin: 0 auto;
 }
 
 .business-card #rmit-logo {
