--- a/css-1/tutorial/exercise-5/tom-example/styles.css
+++ b/css-1/tutorial/exercise-5/tom-example/styles.css
@@ -11,7 +11,7 @@ html  {
 .business-card{
     color: black;
     background-color: white;
-    border: 3px solid #E60028;
+    border: 3px solid #E61E2A;
     padding: 10px 20px;
     border-radius:15px;
     width:500px;
