--- a/css-2/lecture/inline-block-inlineblock/styles.css
+++ b/css-2/lecture/inline-block-inlineblock/styles.css
@@ -1,9 +1,30 @@
-div {
-    background-color: lightgrey;
-    width: 300px;
-    border: 15px solid green;
-    padding: 50px;
+/* Inline element */
+.inline-example {
+    display: inline;
+    background-color: lightblue;
+    padding: 15px;
     margin: 20px;
+    border: 1px solid black;
 }
 
+/* Block element */
+.block-example {
+    display: block;
+    background-color: lightgreen;
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid black;
+    width: 250px;
+    height: 140px;
+}
 
+/* Inline-block element */
+.inline-block-example {
+    display: inline-block;
+    background-color: pink;
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid black;
+    width: 200px;
+    height: 180px;
+}
