polish a few examples

--- a/css-2/lecture/transition/styles.css
+++ b/css-2/lecture/transition/styles.css
@@ -29,6 +29,6 @@
     background-color: green;
 }
 
-.many-box:hover{
-    margin-left:300px;
+.many-box:hover .small-box{
+    margin-left: 300px;
 }
