--- a/css-2/tutorial/exercise-3-personal-site/css/styles.css
+++ b/css-2/tutorial/exercise-3-personal-site/css/styles.css
@@ -47,6 +47,10 @@ a:hover {
   color: #EAF6F6;
 }
 
+.profile img{
+  width: 22%;
+}
+
 .top-container {
   background-color: #E4F9F5;
   position: relative;
@@ -101,13 +105,13 @@ a:hover {
 }
 
 .code-img {
-  width: 25%;
+  width: 20%;
   float: left;
   margin-right: 30px;
 }
 
-.chilli-img {
-  width: 25%;
+.cat-img {
+  width: 20%;
   float: right;
   margin-left: 30px;
 }
