--- a/css-2/tutorial/solutions/exercise-1/styles.css
+++ b/css-2/tutorial/solutions/exercise-1/styles.css
@@ -1,3 +1,6 @@
+body {
+    margin: 0px;
+}
 .box {
     width: 100px;
     height: 100px;
@@ -6,7 +9,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
+    /* position: relative; */
+    position: absolute;
 }
 
 .red {
@@ -16,12 +20,13 @@
 .yellow {
     background-color: yellow;
     /* margin-left: 100px; */
+    top: 100px;
     left: 100px;
 }
 
 .blue {
     background-color: darkblue;
     /* margin-left: 200px; */
+    top: 200px;
     left: 200px;
 }
-
